--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
 	"license": "MIT",
 	"private": false,
 	"scripts": {
-		"dev": "nodemon index",
-		"build": "yarn build"
+		"dev": "nodemon src/index",
+		"start": "node src/index"
 	},
 	"dependencies": {
+		"cors": "^2.8.5",
 		"express": "^4.18.1",
 		"socket.io": "^4.5.1",
 		"uuid4": "^2.0.2"
